--- a/BdHoras/Views/Gestores/CadastroGestores.cshtml
+++ b/BdHoras/Views/Gestores/CadastroGestores.cshtml
@@ -42,6 +42,16 @@
 
             </form>
 
+            <hr>
+
+            <div>
+                <p><strong>Id: </strong>@Model.IdGestor</p>
+                <p><strong>Nome: </strong>@Model.NomeGestor</p>
+                <p><strong>Email: </strong>@Model.EmailGestor</p>
+                <p><strong>IdExclusivo: </strong>@Model.IdExclusivo</p>
+                <p><strong>Grupo: </strong>@Model.NomeGrupo</p>
+            </div>
+
         </div>
     </div>
 </div>
