--- a/BdHoras/Views/Gestores/MontarGrupoGestores.cshtml
+++ b/BdHoras/Views/Gestores/MontarGrupoGestores.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<FuncionariosModel>
+﻿@using BdHoras.Models.ViewModels;
+@model GestoresFuncionariosVinculosViewModel
 
 @{
     ViewData["Title"] = "Montagem de Grupo";
@@ -22,7 +23,7 @@
                 @*     <input type="text" class="form-control" id="formGroupExampleInput" placeholder="aparecerá o nome atual do Grupo aqui [TB_Gestores]"> *@
                 @* </div> *@
 
-                @* <p class="fs-4 text-center">Seu Grupo: @Model.NomeGrupo</p> *@
+                @* <p class="fs-4 text-center">Seu Grupo: @Model.Gestores.FirstOrDefault(g => g.IdExclusivo == ViewBag.userId)</p> *@
 
                 <div class="mb-3">
                     <label for="formGroupExampleInput" class="form-label">Pesquisar Funcionário</label>
@@ -52,20 +53,7 @@
 
 
                     <tbody>
-                        @* <tr> *@
-                        @*     <td>Silvio Santos</td> *@
-                        @*     <td class="text-end">07:00</td> *@
-                        @*     <td class="text"> *@
-
-
-                        @*         <div class="d-flex justify-content-end"> *@
-                        @*             <div class="btn-group w-auto" role="group" aria-label="Basic example"> *@
-                        @*                 <button type="button" class="btn btn-danger">Remover</button> *@
-                        @*             </div> *@
-                        @*         </div> *@
-
-                        @*     </td> *@
-                        @* </tr> *@
+                        @* tabela gerada pelo código contido em Site.js *@
                     </tbody>
 
                 </table>
