--- a/BdHoras/Views/Gestores/CadastroGestores.cshtml
+++ b/BdHoras/Views/Gestores/CadastroGestores.cshtml
@@ -31,7 +31,7 @@
 
                 <div class="mb-3">
                     <label for="formGroupExampleInput" class="form-label">Nome do seu Grupo:</label>
-                    <input type="text" asp-for="NomeGrupo" class="form-control" id="formGroupExampleInput" placeholder="exemplo: ITB FIEB Alphaville - Financeiro">
+                    <input type="text" asp-for="NomeGrupo" class="form-control" id="formGroupExampleInput" placeholder="exemplo: ITB FIEB Alphaville - Financeiro" value="@ViewData["NomeGrupo"]">
                 </div>
 
 
@@ -44,13 +44,13 @@
 
             <hr>
 
-            <div>
-                <p><strong>Id: </strong>@Model.IdGestor</p>
-                <p><strong>Nome: </strong>@Model.NomeGestor</p>
-                <p><strong>Email: </strong>@Model.EmailGestor</p>
-                <p><strong>IdExclusivo: </strong>@Model.IdExclusivo</p>
-                <p><strong>Grupo: </strong>@Model.NomeGrupo</p>
-            </div>
+            @* <div> *@
+            @*     <p><strong>Id: </strong>@Model.IdGestor</p> *@
+            @*     <p><strong>Nome: </strong>@Model.NomeGestor</p> *@
+            @*     <p><strong>Email: </strong>@Model.EmailGestor</p> *@
+            @*     <p><strong>IdExclusivo: </strong>@Model.IdExclusivo</p> *@
+            @*     <p><strong>Grupo: </strong>@Model.NomeGrupo</p> *@
+            @* </div> *@
 
         </div>
     </div>
