Adicionar funcionário na tabela html remove ele das sugestões

--- a/BdHoras/Views/Gestores/MontarGrupoGestores.cshtml
+++ b/BdHoras/Views/Gestores/MontarGrupoGestores.cshtml
@@ -42,6 +42,8 @@
                 <table class="table table-hover" id="tabelaSelecionados">
                     <thead>
                         <tr>
+                            <th scope="col">IdGestor</th>
+                            <th scope="col">IdFuncionario</th>
                             <th scope="col">Matrícula</th>
                             <th scope="col">Nome</th>
                             <th scope="col">Email</th>
